--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<h1>DevOps - Actividad - Uso de Github</h1>
 		</div>
 
+		<div class="banner">
+			<img src="imgs/img1.jpeg">
+		<div>
 		<main>
 			<div class="titulo_actividad"><h2>Artículo</h2></div>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Non odio euismod lacinia at. Lacus vestibulum sed arcu non. Malesuada fames ac turpis egestas sed. Sed libero enim sed faucibus turpis in eu. Feugiat sed lectus vestibulum mattis. Amet aliquam id diam maecenas ultricies mi. Ut enim blandit volutpat maecenas volutpat. Eget egestas purus viverra accumsan in nisl nisi. Tristique magna sit amet purus gravida quis blandit.
